# Kdenlive

./: .gitignore  README.md  pyproject.toml
Edits/Fort Brownlow/: We_Salute_the_Chronic.kdenlive
Projects/: BRoll Harvester.kdenlive  BRoll Harvester_backup0.kdenlive  BRoll Harvester_backup1.kdenlive
config/: kdv.yaml
kdv/: __init__.py  cli.py  config.py  convert.py  export.py  extract.py  ingest.py  metadata.py  proxy.py  thumbnails.py
